--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <title>Space test</title> 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="icon2.ico">
+    <link rel="icon" href="icon.ico">
 </head>
     <body>
         <div id="spaceship"></div>
-        <div id="alien"></div>
+        <div id="that"></div>
         <button id="ok" type="button" onclick="fun()">click me</button>
         <div class="planet mars">mars</div>
         <div class="planet earth">earth</div>
